fix: eth address instead of public key on api
